--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "i18next-browser-languagedetector": "7.1.0",
     "i18next-http-backend": "2.2.2",
     "react": "17.0.2",
-    "react-bootstrap": "2.2.1",
+    "react-bootstrap": "2.8.0",
     "react-dom": "17.0.2",
     "react-github-calendar": "3.2.2",
     "react-i18next": "12.1.5",
@@ -62,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "autoprefixer": "10.4.5"
   }
 }
